metadatadeploy/objects/Roster_Assignment__c.object
<CustomObject>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <description>Individual records from a roster, assigning a practitioner to a billing entity</description>
    
    
    
    
    
    
    
    
    
    
    
    <label>Roster Assignment</label>
    
    <nameField>
        
        <displayFormat>RA-{00000}</displayFormat>
        
        <label>Roster Assignment Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    
    <pluralLabel>Roster Assignments</pluralLabel>
    
    
    <sharingModel>ControlledByParent</sharingModel>
    
    
<fields>
        
    <fullName>Account__c</fullName>
        
    <description>Lookup to top-level account for a participant</description>
        
        
    <label>Account</label>
        
    <lookupFilter>
            
        <active>true</active>
            
        <errorMessage>Value does not exist or does not match filter criteria, Account must be of type &quot;Organization&quot;</errorMessage>
            
        <filterItems>
                
            <field>Account.Type</field>
                
            <operation>equals</operation>
                
            <value>Organization</value>
                
        </filterItems>
            
        <isOptional>false</isOptional>
            
    </lookupFilter>
        
    <referenceTo>Account</referenceTo>
        
    <relationshipLabel>Roster Assignments</relationshipLabel>
        
    <relationshipName>Roster_Assignments</relationshipName>
        
    <relationshipOrder>0</relationshipOrder>
        
        
        
    <type>MasterDetail</type>
        
        
</fields>
    <fields>
        
    <fullName>Document_Id__c</fullName>
        
        
    <label>Document Id</label>
        
    <length>255</length>
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>End_Date__c</fullName>
        
    <description>Termination date of this practitioner&apos;s assignment</description>
        
        
    <label>End Date</label>
        
        
        
    <type>Date</type>
        
</fields>
    <fields>
        
    <fullName>Practitioner__c</fullName>
        
    <deleteConstraint>SetNull</deleteConstraint>
        
    <description>Lookup to practitioner record who is being assigned</description>
        
        
    <label>Practitioner</label>
        
    <lookupFilter>
            
        <active>true</active>
            
        <errorMessage>Value does not exist or does not match filter criteria, must look up to a practitioner</errorMessage>
            
        <filterItems>
                
            <field>Contact.NPI__c</field>
                
            <operation>notEqual</operation>
                
            <value/>
                
        </filterItems>
            
        <isOptional>false</isOptional>
            
    </lookupFilter>
        
    <referenceTo>Contact</referenceTo>
        
    <relationshipLabel>Roster Assignments</relationshipLabel>
        
    <relationshipName>Roster_Assignments</relationshipName>
        
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>Source_System_Id__c</fullName>
        
    <description>Id of the external document where the roster assignment originates from.</description>
        
        
    <label>Source System Id</label>
        
    <length>255</length>
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Start_Date__c</fullName>
        
        
    <label>Start Date</label>
        
        
        
    <type>Date</type>
        
</fields>
    <fields>
        
    <fullName>TaxId__c</fullName>
        
        
    <label>TaxId</label>
        
    <length>255</length>
        
    <required>true</required>
        
        
    <type>Text</type>
        
        
</fields>
    <listViews>
        
    <fullName>All</fullName>
        
    <columns>NAME</columns>
        
    <columns>Account__c</columns>
        
    <columns>Practitioner__c</columns>
        
    <columns>TaxId__c</columns>
        
    <columns>Start_Date__c</columns>
        
    <columns>End_Date__c</columns>
        
    <filterScope>Everything</filterScope>
        
    <label>All</label>
        
</listViews>
</CustomObject>